Change Log

perdition
Mail retrieval proxy server
Copyright (C) 1999  Horms <horms@vergenet.net>
----------------------------------------------------------------------

9th January 2001
(Horms)

   * Version 0.1.6
   - Fixed Bug in specifying port of PostgreSQL server.
     Thanks to Michael J. Maravillo.
   - Fixed Bug in reporting of reauthenication failures in IMAP4 mode
     Thanks to Mike Shirobokov
   - Added logging to libtcp_pipe that is activated by running
     perdition in debug mode
   - LDAP popmap access support added courtesy of ChrisS
   - Fixed compile time dependancies on PAM
   - Added sysconfig file to control init script
   - Split mysql, posgresql and ldap libaries into separage rpm packages
     so perdition can be installed without the dependancies that
     these bring.
   - Added IMAP4REV1 to IMAP4_CAPABILITIES in imap4_write.h to fix
     incompatibility with Outlook 5. Thanks to Valtteri Vuorikoski
   - LDAP popmax fix for values with only one attribute
     courtesy of Jeremy Nelson 
   - Added perdition_LDFLAGS = -Wl,--rpath -Wl,@prefix@ to
     perdition/Makefile.am to aid finding modules. (Removed because debian
     doesn't like it,)
     Thanks to Arvid Requate
   - Added NIS map, thanks to Nathan Neulinger
   - Removed uneccessary macros in config parsing code
   - Fixed freeing of structure for default server 
   - Tidied up build and added debian directory so debian packages can
     be build.
   - Bind Address now dictates source address for conections to real
     servers
   - Greet with reverse DNS of bind_address if given.
     An option is supplied to disable this behaviour
   - Added quiet option which allows for logging only of (fatal) 
     internal errors
   - More powerful configuration file parser. In particular
     empty values may be specified and # (hash) characters may
     be in keys or values.
   - Buffered reads from client during authentication (and about time too)