@@ -25,7 +25,7 @@
 
 AC_INIT(makegdbm/makegdbm.c)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(perdition, 0.1.6)
+AM_INIT_AUTOMAKE(perdition, 0.1.7pre1)
 
 AM_PROG_LIBTOOL
 AC_PROG_CC
