@@ -138,7 +138,7 @@ int options(int argc, char **argv, flag_t f){
     {"outgoing_port",               'p', POPT_ARG_STRING, NULL, 'p'},
     {"protocol",                    'P', POPT_ARG_STRING, NULL, 'P'},
     {"listen_port",                 'l', POPT_ARG_STRING, NULL, 'l'},
-    {"server_ok_line",              'o', POPT_ARG_STRING, NULL, 'o'},
+    {"server_ok_line",              'o', POPT_ARG_NONE,   NULL, 'o'},
     {"strip_domain",                'S', POPT_ARG_STRING, NULL, 'S'},
     {"timeout",                     't', POPT_ARG_STRING, NULL, 't'},
     {"username",                    'u', POPT_ARG_STRING, NULL, 't'},
@@ -443,8 +443,8 @@ int log_options(void){
     str_null_safe(opt.domain_delimiter),
     str_null_safe(opt.group),
     opt.inetd_mode,
-    str_null_safe(opt.log_facility),
     str_null_safe(opt.listen_port),
+    str_null_safe(opt.log_facility),
     str_null_safe(opt.map_library),
     str_null_safe(opt.map_library_opt),
     opt.no_bind_banner,
